<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/activity_book_create_create"
        android:icon="?attr/ic_accept"
        android:showAsAction="always"
        android:title="@string/activity_book_create_create"
        android:visible="false">
    </item>
    <item
        android:id="@+id/activity_book_create_save"
        android:icon="?attr/ic_save"
        android:showAsAction="always"
        android:title="@string/activity_book_create_save"
        android:visible="false"/>
    <item
        android:id="@+id/activity_book_create_cancel"
        android:icon="?attr/ic_cancel"
        android:showAsAction="always"
        android:title="@string/activity_book_create_cancel"
        android:visible="false"/>

</menu>